--- a/custom/index.html
+++ b/custom/index.html
@@ -62,7 +62,7 @@
 
                 console.log("PLAYER_LOAD_COMPLETE: ");
                 playerManager.play();
-                scheduleOpenSession()
+                //scheduleOpenSession()
 
 
 
@@ -446,7 +446,7 @@
             context.sendCustomMessage(channel, senderId, message);
         }
 
-        
+        /*
         function scheduleOpenSession(){
             console.log("CUSTOM LOG: openSession:  schedule");
             openSession();
@@ -463,6 +463,7 @@
             clearInterval(sessionManagerTimer);
             console.log("CUSTOM LOG: closeSession");
         }
+        */
         
 
     </script>
