--- a/custom/index.html
+++ b/custom/index.html
@@ -381,7 +381,7 @@
                 case "login":
                     wasAbi.login(params);
                 case "sessionParams":
-                    wasAbi.initSessionParams(params);
+                    //wasAbi.initSessionParams(params);
                 case "requestSessionParams":
                     sendSessionParams();
                     break;
