--- a/custom/index.html
+++ b/custom/index.html
@@ -78,7 +78,7 @@
 
 
                     event.media.tracks[i].name = wasAbi.getLanguageName(event.media.tracks[i].name);
-                    console.log("on PLAYER_LOAD_COMPLETE: getLanguageName " + event.media.tracks[i].name);
+                    console.log("on PLAYER_LOAD_COMPLETE: getLanguageName replaced " + event.media.tracks[i].name);
 
                     /*
                     if ((event.media.tracks[i].type == "AUDIO") && (event.media.tracks[i].language == defaultAudio))  {
