--- a/custom/index.html
+++ b/custom/index.html
@@ -77,7 +77,10 @@
                     console.log("on PLAYER_LOAD_COMPLETE: tracks[" + i + "].type: " + event.media.tracks[i].type);
 
 
-                    event.media.tracks[i].name = wasAbi.getLanguageName(event.media.tracks[i].name);
+                    console.log("on PLAYER_LOAD_COMPLETE: getLanguageName name " + event.media.tracks[i].name);
+                    if (event.media.tracks[i].name != null){
+                        event.media.tracks[i].name = wasAbi.getLanguageName(event.media.tracks[i].name);
+                    }
                     console.log("on PLAYER_LOAD_COMPLETE: getLanguageName replaced " + event.media.tracks[i].name);
 
                     /*
