Add content image and name to session params

--- a/custom/index.html
+++ b/custom/index.html
@@ -374,8 +374,8 @@
                 }
 
                 // stop the session
-                //context.stop();
-                //wasAbi.closeSession()
+                context.stop();
+                wasAbi.closeSession()
             }
         );
 
