Mark position npvr and catchup

--- a/custom/index.html
+++ b/custom/index.html
@@ -499,6 +499,7 @@
             // live will not send mark position
             if (!wasAbi.isPlayingLive()){
 
+                /*
                 if (!wasAbi.isPlayingCatchup()){
                     // vod / svod
                     markPositionTimer = setInterval(updateMarkPosition, wasAbi.getMarkPositionInterval());
@@ -507,6 +508,9 @@
                 }else{
                     //catchup
                 }
+                */
+
+                markPositionTimer = setInterval(updateMarkPosition, wasAbi.getMarkPositionInterval());
             }
         }
 
