--- a/custom/index.html
+++ b/custom/index.html
@@ -83,8 +83,8 @@
                     console.log("on PLAYER_LOAD_COMPLETE: getLanguageName name " + event.media.tracks[i].name);
                     if (event.media.tracks[i].name != null || event.media.tracks[i].name != "" ){
                         //event.media.tracks[i].name = wasAbi.getLanguageName(event.media.tracks[i].name);
-                        //var replaced = wasAbi.getLanguageName(event.media.tracks[i].name);
-                        //console.log("on PLAYER_LOAD_COMPLETE: getLanguageName replaced value" + replaced);
+                        var replaced = wasAbi.getLanguageName(event.media.tracks[i].name);
+                        console.log("on PLAYER_LOAD_COMPLETE: getLanguageName replaced value" + replaced);
                     }
                     console.log("on PLAYER_LOAD_COMPLETE: getLanguageName replaced " + event.media.tracks[i].name);
 
