--- a/custom/index.html
+++ b/custom/index.html
@@ -81,6 +81,7 @@
 
 
                     
+                    console.log("on PLAYER_LOAD_COMPLETE: track read ");
                     var trackName = event.media.tracks[i].name;
                     console.log("on PLAYER_LOAD_COMPLETE: getLanguageName name " + trackName);
                     if (trackName != null || trackName != "" ){
