--- a/custom/index.html
+++ b/custom/index.html
@@ -79,27 +79,10 @@
                     console.log("on PLAYER_LOAD_COMPLETE: tracks[" + i + "].trackId: " + event.media.tracks[i].trackId);
                     console.log("on PLAYER_LOAD_COMPLETE: tracks[" + i + "].type: " + event.media.tracks[i].type);
 
-                    /*
-                    if (event.media.tracks[i].type == "AUDIO"){
-                        if (wasAbi.getDefaultAudioLanguage == "qaa"){
-                            console.log("qaa");
-                        }else{
-                            playerManager.getAudioTracksManager().setActiveByLanguage(event.media.tracks[i].language);
-                        }
-                    }
-
-                    if (event.media.tracks[i].type == "AUDIO" && event.media.tracks[i].language == wasAbi.getDefaultAudioLanguage()){
-                        playerManager.getAudioTracksManager().setActiveByLanguage(event.media.tracks[i].language);
-                    }
-
-                    if (event.media.tracks[i].type == "TEXT" && event.media.tracks[i].language == wasAbi.getDefaultSubtitlesLanguage()){
-                        playerManager.getTextTracksManager().setActiveByLanguage(event.media.tracks[i].language);
-                    }
-                    */
-            
                 }
 
-                setDefaultLanguage(event.media.tracks)
+                setDefaultLanguage(event.media.tracks);
+                setDefaultSubtitles(event.media.tracks);
 
 
                 console.log("PLAYER_LOAD_COMPLETE: " + JSON.stringify(event.media));
@@ -498,7 +481,6 @@
         }
 
         function setDefaultLanguage(tracks){
-            console.log("on PLAYER_LOAD_COMPLETE: setDefaultLanguage ");
             if (wasAbi.getDefaultAudioLanguage() == "qaa"){
                 console.log("qaa");
                 var qaaFound = false;
@@ -508,7 +490,6 @@
                     if (tracks[i].type == "AUDIO" && tracks[i].language == wasAbi.getDefaultAudioLanguage()){
                         playerManager.getAudioTracksManager().setActiveByLanguage(tracks[i].language);
                         qaaFound = true;
-                        console.log("on PLAYER_LOAD_COMPLETE: found" + tracks[i].language);
                     }
                 }
 
@@ -518,26 +499,21 @@
                         if (tracks[i].type == "AUDIO" && tracks[i].language == secondaryQaaLanguage){
                             playerManager.getAudioTracksManager().setActiveByLanguage(tracks[i].language);
                             qaaFound = true;
-
-                            console.log("on PLAYER_LOAD_COMPLETE: found" + tracks[i].language);
                         }
                     }
                 }
 
-                //set first language if is not spanish
+                //set first language except spanish
                 if (!qaaFound){
                     for (var i = 0; i < tracks.length; i++) {
                         if (!qaaFound && tracks[i].type == "AUDIO" && tracks[i].language != notQaaLanguage){
                             playerManager.getAudioTracksManager().setActiveByLanguage(tracks[i].language);
                             qaaFound = true;
-
-                            console.log("on PLAYER_LOAD_COMPLETE: found" + tracks[i].language);
                         }
                     }
                 }
 
             }else{
-                console.log("not qaa ");
                 //if  selected language is not qaa try to set automatically
                 for (var i = 0; i < tracks.length; i++) {
                     if (tracks[i].type == "AUDIO" && tracks[i].language == wasAbi.getDefaultAudioLanguage()){
@@ -547,7 +523,48 @@
             }
         }
 
-        function setDefaultSubtitles(){
+        function setDefaultSubtitles(tracks){
+
+            if (wasAbi.getDefaultSubtitlesLanguage() == "qaa"){
+                console.log("qaa");
+                var qaaFound = false;
+
+                //search qaa
+                for (var i = 0; i < tracks.length; i++) {
+                    if (tracks[i].type == "TEXT" && tracks[i].language == wasAbi.getDefaultSubtitlesLanguage()){
+                        playerManager.getTextTracksManager().setActiveByLanguage(tracks[i].language);
+                        qaaFound = true;
+                    }
+                }
+
+                //search secondary qaa language (eng)
+                if (!qaaFound){
+                    for (var i = 0; i < tracks.length; i++) {
+                        if (tracks[i].type == "TEXT" && tracks[i].language == secondaryQaaLanguage){
+                            playerManager.getTextTracksManager().setActiveByLanguage(tracks[i].language);
+                            qaaFound = true;
+                        }
+                    }
+                }
+
+                //set first language except spanish
+                if (!qaaFound){
+                    for (var i = 0; i < tracks.length; i++) {
+                        if (!qaaFound && tracks[i].type == "TEXT" && tracks[i].language != notQaaLanguage){
+                        playerManager.getTextTracksManager().setActiveByLanguage(tracks[i].language);
+                            qaaFound = true;
+                        }
+                    }
+                }
+
+            }else{
+                //if  selected language is not qaa try to set automatically
+                for (var i = 0; i < tracks.length; i++) {
+                    if (tracks[i].type == "TEXT" && tracks[i].language == wasAbi.getDefaultSubtitlesLanguage()){
+                        playerManager.getTextTracksManager().setActiveByLanguage(tracks[i].language);
+                    }
+                }
+            }
 
         }
         
