--- a/custom/index.html
+++ b/custom/index.html
@@ -8,6 +8,8 @@
 
     <cast-media-player style="width: 100%;" id="player"></cast-media-player>
 
+    <div id="fingerprint" style="color: red; z-index: 9999; position: absolute; float: left; background-color: black; color: white;">00000000</div>
+
     <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
     <script type="text/javascript" src="receiver2.5.8.js"> </script>
     <script type="text/javascript" src="WasABI.js"> </script>
