First fingerprint test

--- a/custom/index.html
+++ b/custom/index.html
@@ -8,7 +8,7 @@
 
     <cast-media-player style="width: 100%;" id="player"></cast-media-player>
 
-    <div id="fingerprint" style="color: red; z-index: 9999; position: absolute; float: left; background-color: black; color: white; margin-left: 5%; margin-top: 5%; font-size: 16px;">00000000</div>
+    <div id="fingerprint" style="color: red; z-index: 9999; position: absolute; float: left; background-color: black; color: white; margin-left: 5%; margin-top: 5%; font-size: 20px; padding: 5px; border-radius: 5px;">00000000</div>
 
     <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
     <script type="text/javascript" src="receiver2.5.8.js"> </script>
