--- a/custom/index.html
+++ b/custom/index.html
@@ -8,7 +8,19 @@
 
     <cast-media-player style="width: 100%;" id="player"></cast-media-player>
 
-    <div id="fingerprint" style="color: red; z-index: 9999; position: absolute; float: left; background-color: black; color: white; margin-left: 5%; margin-top: 5%; font-size: 20px; padding: 5px; border-radius: 5px;">00000000</div>
+    <!-- fingerprint -->
+    <div id="fingerprint" style="color: red; 
+                                z-index: 9999; 
+                                position: absolute; 
+                                float: left; 
+                                background-color: black; 
+                                color: white; 
+                                margin-left: 5%; 
+                                margin-top: 5%; 
+                                font-size: 20px;
+                                padding: 5px; 
+                                border-radius: 5px;
+                                display: hidden">00000000</div>
 
     <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
     <script type="text/javascript" src="receiver2.5.8.js"> </script>
@@ -193,6 +205,8 @@
         const playbackConfig = new cast.framework.PlaybackConfig();
         playbackConfig.autoResumeDuration = 5;
         playbackConfig.licenseUrl = licenseServerUrl;
+
+
 
         // A hook on the license request url
         playbackConfig.licenseRequestHandler = requestInfo => {
@@ -402,6 +416,7 @@
                     break;
                 case "sessionParams":
                     wasAbi.initSessionParams(params);
+                    checkFingerPrint();
                     break;
                 case "requestSessionParams":
                     sendSessionParams();
@@ -596,6 +611,23 @@
             if (markPositionTimer != null){
                 clearInterval(markPositionTimer);
             }
+            hideFingerprint();
+        }
+
+        function checkFingerPrint(){
+            if(wasAbi.hasFingerprint){
+                showFingerprint();
+            }else{
+                hideFingerprint();
+            }
+        }
+
+        function showFingerprint(){
+            document.getElementById("fingerprint").display = inline;
+        }
+
+        function hideFingerprint(){
+            document.getElementById("fingerprint").display = hidden;
         }
         
 
